# kr_attitude_eskf

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
config/: params.yaml  params_gx4.yaml
include/kr_attitude_eskf/: AttitudeESKF.hpp  AttitudeMagCalib.hpp  Node.hpp
launch/: attitude_eskf.launch  imu.launch  test.launch
msg/: Status.msg
src/: AttitudeESKF.cpp  AttitudeESKF.hpp  AttitudeMagCalib.cpp  AttitudeMagCalib.hpp  Node.cpp  kr_attitude_eskf.cpp
srv/: BeginCalibration.srv
tools/: imu_to_pose.launch  imu_to_pose.py
