<?xml version="1.0"?>
<package>
  <name>kr_attitude_eskf</name>
  <version>0.0.6</version>
  <description>Error state kalman filter for attitude determination</description>

  <maintainer email="gcross.code@icloud.com">gcross</maintainer>
  <author>Gareth Cross</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>galt_common</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>galt_common</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <export>
  </export>
</package>
